gccida/g1/timevar_push
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_push/src/timevar.c:732:6: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
if ( stack_0 ) 
     ^~~~~~~
     stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_push/src/timevar.c:733:22: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
timevar_accumulate( &stack_0->timevar->elapsed, &start_time, &now); 
                     ^~~~~~~
                     stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_push/src/timevar.c:741:12: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
v2->next = stack_0; 
           ^~~~~~~
           stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_push/src/timevar.c:742:1: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
stack_0 = v2; 
^~~~~~~
stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_push/src/obj/timevar.o] Error 1
